DemoMyApp/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Mobile_Phone_Composite__c</fullName>
        <formula>IF( ISBLANK( Mobile_Phone_Country_Code__c ) || ISBLANK( Mobile_Phone_Area_Code__c ) || ISBLANK( Mobile_Phone_Main_Number__c ) , null ,
Mobile_Phone_Country_Code__c + &apos;-&apos; + Mobile_Phone_Area_Code__c + &apos;-&apos; + Mobile_Phone_Main_Number__c
+ IF( ISBLANK( Mobile_Phone_Extension__c ) , null , &apos; x&apos; + Mobile_Phone_Extension__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone Composite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Country_Code__c</fullName>
        <label>Secondary Phone Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Extension__c</fullName>
        <label>Mobile Phone Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Main_Number__c</fullName>
        <label>Secondary Phone Main Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_2__c</fullName>
        <inlineHelpText>Used when Contact has dual citizenship</inlineHelpText>
        <label>Nationality 2 - Applicant - OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality - Applicant - OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Campus__c</fullName>
        <formula>Program_Primary__r.Campus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Program__c</fullName>
        <formula>Program_Primary__r.Friendly_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Start_Term__c</fullName>
        <label>OP:Start Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Text__c</fullName>
        <label>Organization Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Area_Code__c</fullName>
        <label>Other Phone Area Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Composite__c</fullName>
        <formula>IF( ISBLANK( Other_Phone_Country_Code__c ) || ISBLANK( Other_Phone_Area_Code__c ) || ISBLANK( Other_Phone_Main_Number__c ) , null ,
Other_Phone_Country_Code__c + &apos;-&apos; + Other_Phone_Area_Code__c + &apos;-&apos; + Other_Phone_Main_Number__c
+ IF( ISBLANK( Other_Phone_Extension_Number__c ) , null , &apos; x&apos; + Other_Phone_Extension_Number__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phone Composite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Country_Code__c</fullName>
        <label>Other Phone Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Extension_Number__c</fullName>
        <label>Other Phone Extension Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Main_Number__c</fullName>
        <label>Other Phone Main Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsource_Telemarketer_Company__c</fullName>
        <description>This field is mapped from the Lead and is intended to capture data when a Lead is converted.</description>
        <label>Outsource Telemarketer Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsource_Telemarketer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is mapped from the Lead and is intended to capture data when a Lead is converted.</description>
        <label>Outsource Telemarketer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Country__c</fullName>
        <label>Phone Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (By Phone Country)</relationshipLabel>
        <relationshipName>Contacts_By_Phone_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Parsed__c</fullName>
        <description>This field pre-parses the organizations into program STEMS</description>
        <formula>if( Program_preParsed__c =&quot;Bachelor of International Business Administration&quot;, &quot;BIBA&quot;, if(Program_preParsed__c =&quot;MSE&quot;  || Program_preParsed__c =&quot;MIM&quot;  || Program_preParsed__c =&quot;MIM&quot; || Program_preParsed__c =&quot;MFIN&quot; || Program_preParsed__c =&quot;MIB&quot;,&quot;Masters&quot; ,Program_preParsed__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Parsed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Primary__c</fullName>
        <label>Program (Primary)</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Contacts: By Program (Primary)</relationshipLabel>
        <relationshipName>Contacts_By_Program_Primary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Secondary__c</fullName>
        <label>Program (Secondary)</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Contacts: By Program (Secondary)</relationshipLabel>
        <relationshipName>Contacts_By_Program_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_preParsed__c</fullName>
        <description>to get the STEM of the program primary field, e.g. EMBA</description>
        <formula>if(FIND( &quot;m-&quot;,Program_Primary__r.Name, 1)&lt;&gt;0, MID(Program_Primary__r.Name, 1, FIND( &quot;m-&quot;,Program_Primary__r.Name, 1)-1 ) ,if(FIND( &quot;w-&quot;,Program_Primary__r.Name, 1)&lt;&gt;0, MID(Program_Primary__r.Name, 1, FIND( &quot;w-&quot;,Program_Primary__r.Name, 1)-1 ) ,MID(Program_Primary__r.Name, 1, FIND( &quot;-&quot;,Program_Primary__r.Name, 1) -1) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program pre-Parsed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_third__c</fullName>
        <label>Program (third)</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Contacts (Program (third))</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommender_Company__c</fullName>
        <label>Recommender Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lat Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eurasia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In A Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In A Civil Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In A Domestic Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SitecorePasswordAnswer__c</fullName>
        <description>Answer to password question</description>
        <label>Sitecore Password Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SitecorePasswordEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Sitecore password is encrypted</description>
        <inlineHelpText>This check box should be &quot;Un-Checked&quot; when a new password is entered.
The system will encrypt the password and check the check box automatically on Sitecore log in.</inlineHelpText>
        <label>Password Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SitecorePasswordQuestion__c</fullName>
        <description>Forgotten password question</description>
        <label>Sitecore Password Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SitecorePassword__c</fullName>
        <label>Sitecore Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SitecoreUsername__c</fullName>
        <description>Sitecore Username</description>
        <externalId>true</externalId>
        <label>Sitecore Username</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sponsor_Address__c</fullName>
        <inlineHelpText>Sponsor or Legal Guardian Address</inlineHelpText>
        <label>DONOTUSESponsor/Legal Guardian: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Contact_Person__c</fullName>
        <inlineHelpText>Sponsor or Legal Guardian Name</inlineHelpText>
        <label>DONOTUSESponsor/Legal Guardian</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Employer_or_Organization__c</fullName>
        <inlineHelpText>Sponsor or Guardian Employer name or Organization Name</inlineHelpText>
        <label>DONOTUSESponsor/Guardian: Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Fax_Number__c</fullName>
        <label>DONOTUSESponsor/Guardian: Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sponsor_Job_Title__c</fullName>
        <label>DONOTUSESponsor/Guardian: Job Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Phone_Number__c</fullName>
        <inlineHelpText>Sponsor or Guardian phone number</inlineHelpText>
        <label>DONOTUSESponsor/Guardian: Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sponsor_of_Education__c</fullName>
        <label>DONOTUSESponsor of Education</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization other then Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undetermined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Term__c</fullName>
        <label>Start Term</label>
        <picklist>
            <picklistValues>
                <fullName>September 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub-Region</label>
        <picklist>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Account_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Migrated Top Apply Account ID</inlineHelpText>
        <label>TA Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Date_Created__c</fullName>
        <inlineHelpText>This is the date that the Top Apply applicant was created for migration purposes.</inlineHelpText>
        <label>TA Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Recruiter__c</fullName>
        <label>TA Recruiter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL_Score__c</fullName>
        <label>TOEFL Score</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telesales_Caller__c</fullName>
        <inlineHelpText>Telesales users, interview booked by</inlineHelpText>
        <label>Telesales Caller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Login__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Login</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Campaign_Source__c</fullName>
        <label>Web Campaign Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Source__c</fullName>
        <label>Web Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Campus_are_you_interested_in__c</fullName>
        <label>Which Campus are you interested in?</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Months__c</fullName>
        <label>Work Experience (Months)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Years__c</fullName>
        <label>Work Experience (Years)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Load__c</fullName>
        <label>Work Load</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive MBA Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isEnglishNative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>English Native Language</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Applicants</fullName>
        <columns>FULL_NAME</columns>
        <columns>Program_Primary__c</columns>
        <columns>Country_Of_Residence__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Interview_Date__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Applicants</label>
    </listViews>
    <listViews>
        <fullName>Masters</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.ACCOUNT_ID</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Primary__c</field>
            <operation>equals</operation>
        </filters>
        <label>Masters</label>
    </listViews>
    <listViews>
        <fullName>Mr_Hult_Hult</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Program_Primary__c</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country_Of_Residence__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>hhult</value>
        </filters>
        <filters>
            <field>Country_Of_Residence__c</field>
            <operation>equals</operation>
        </filters>
        <label>Mr. Hult Hult</label>
        <sharedTo>
            <groups>Round Corner</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nadia</fullName>
        <columns>FULL_NAME</columns>
        <columns>Country_Of_Residence__c</columns>
        <columns>Program_Primary__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Nadia</value>
        </filters>
        <filters>
            <field>Start_Term__c</field>
            <operation>equals</operation>
            <value>September 2012</value>
        </filters>
        <filters>
            <field>Do_Not_Route__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Nadia</label>
        <sharedTo>
            <groups>Round Corner</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Last_Log_In__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Program_Primary__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>Applicant_Email__c</columns>
        <columns>Country_Of_Residence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Owned_By_Chris_Hein</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hein</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Christopher</value>
        </filters>
        <label>Owned By Chris Hein</label>
        <sharedTo>
            <roles>System Administrator</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>without_organizations_s4s</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Program_Primary__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>sapiu</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Primary__c</field>
            <operation>equals</operation>
        </filters>
        <label>without organizations s4s</label>
    </listViews>
    <listViews>
        <fullName>zepp_as_owner</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>delaney</value>
        </filters>
        <label>zepp as owner</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>zepp_as_owner1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>delaney</value>
        </filters>
        <label>zepp as owner</label>
        <sharedTo/>
    </listViews>
    <namedFilters>
        <fullName>Contact_00NK0000000VP40MAG</fullName>
        <active>true</active>
        <field>Contact.Indirect_Agent_Name__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hult Agent Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Indirect Agent Name</name>
    </namedFilters>
    <recordTypes>
        <fullName>Hult_Agent_Contact</fullName>
        <active>true</active>
        <description>Hult agent contacts</description>
        <label>Hult Agent Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hult_Applicant</fullName>
        <active>true</active>
        <description>Hult Applicant contacts.</description>
        <label>Hult Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referee</fullName>
        <active>true</active>
        <label>Referee</label>
    </recordTypes>
</CustomObject>